--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -8,7 +8,7 @@
     {% block page_meta %}
     {% endblock %}
     <!-- Title -->
-    <title> {% block title %} Arabian Kinghts Tours {% endblock %} </title>
+    <title> {% block title %} Arabian Knights Tours {% endblock %} </title>
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}" />
     <!-- animate css -->
