--- a/frontend/templates/frontend/footer.html
+++ b/frontend/templates/frontend/footer.html
@@ -32,12 +32,12 @@
                 </div>
                 <div class="footer_link_area">
                     <ul>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="testimonials.html">Testimonials</a></li>
-                        <li><a href="faqs.html">Rewards</a></li>
+                        <li><a href="{% url 'about' %}">About Us</a></li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="{% url 'faq' %}">Rewards</a></li>
                         <li><a href="terms-service.html">Work with Us</a></li>
-                        <li><a href="tour-guides.html">Meet the Team </a></li>
-                        <li><a href="news.html">Blog</a></li>
+                        <li><a href="">Meet the Team </a></li>
+                        <li><a href="{% url 'blogs' %}">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,12 +47,12 @@
                 </div>
                 <div class="footer_link_area">
                     <ul>
-                        <li><a href="dashboard.html">Account</a></li>
-                        <li><a href="faq.html">Faq</a></li>
-                        <li><a href="testimonials.html">Legal</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="top-destinations.html"> Affiliate Program</a></li>
-                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                       
+                        <li><a href="{% url 'faq' %}">Faq</a></li>
+                        <li><a href="">Legal</a></li>
+                        <li><a href="{% url 'contact' %}">Contact</a></li>
+                        
+                        <li><a href="">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,12 +62,12 @@
                 </div>
                 <div class="footer_link_area">
                     <ul>
-                        <li><a href="top-destinations-details.html">Community program</a></li>
-                        <li><a href="top-destinations-details.html">Investor Relations</a></li>
-                        <li><a href="flight-search-result.html">Rewards Program</a></li>
-                        <li><a href="room-booking.html">PointsPLUS</a></li>
-                        <li><a href="testimonials.html">Partners</a></li>
-                        <li><a href="hotel-search.html">List My Hotel</a></li>
+                        <li><a href="">Dubai Desert Safari</a></li>
+                        <li><a href="">Evening Desert Safari</a></li>
+                        <li><a href="">Morning Desert Safari</a></li>
+                        <li><a href="">Overnight Desert Safari</a></li>
+                        <li><a href="">Dubai/Abudhabi City Tours</a></li>
+                        <li><a href="">UAE attractions</a></li>
                     </ul>
                 </div>
             </div>
@@ -77,12 +77,12 @@
                 </div>
                 <div class="footer_link_area">
                     <ul>
-                        <li><a href="room-details.html">Chicago</a></li>
-                        <li><a href="hotel-details.html">New York</a></li>
-                        <li><a href="hotel-booking.html">San Francisco</a></li>
-                        <li><a href="tour-search.html">California</a></li>
-                        <li><a href="tour-booking.html">Ohio </a></li>
-                        <li><a href="tour-guides.html">Alaska</a></li>
+                        <li><a href="room-details.html">Maldeep</a></li>
+                        <li><a href="hotel-details.html">Georgia</a></li>
+                        <li><a href="hotel-booking.html">Italy</a></li>
+                        <li><a href="tour-search.html">Paris</a></li>
+                        <li><a href="tour-booking.html">Singapore </a></li>
+                        <li><a href="tour-guides.html">Armenia</a></li>
                     </ul>
                 </div>
             </div>
@@ -99,7 +99,7 @@
             </div>
             <div class="co-lg-6 col-md-6 col-sm-12 col-12">
                 <div class="copyright_right">
-                    <img src="/static/assets/img/common/cards.png" alt="img">
+                    <img src="" alt="img">
                 </div>
             </div>
         </div>
