--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -19,8 +19,8 @@
                                 <h2 class="slider-pararp">UAE with us!</h2>
                                 <h4 class="slider-pararp">Find awesome UAE tours, hotels, tours, cars and packages and Top rated Desert Safari in dubai</h4>
                                 <div class="home_two_button btn-animation">
-                                    <a href="top-destinations.html" class="btn btn_theme_white btn_md">Discover </a>
-                                    <a href="top-destinations.html" class="btn btn_theme_transparent btn_md">Know
+                                    <a href="" class="btn btn_theme_white btn_md">Discover </a>
+                                    <a href="" class="btn btn_theme_transparent btn_md">Know
                                         more</a>
                                 </div>
                             </div>
@@ -34,7 +34,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="banner_two_text">
-                                <h3 class="title">BEST TRAVEL AGENCY</h3>
+                                <h3 class="title">Arabian Knights Tours</h3>
                                 <h1 class="slider-sttle">EXPLORE</h1>
                                 <h2 class="slider-pararp">The world with us!</h2>
                                 <h4 class="slider-pararp">Find awesome flights, hotel, tour, car and packages</h4>
@@ -87,8 +87,7 @@
                     <div class="top_service_boxed">
                         <img src="/static/assets/img/icon/service-1.png" alt="icon">
                         <h3>Hotel Booking</h3>
-                        <p>Mollit magna ex sint anim. Et velit ea in incididunt amet incididunt deserunt mollit magna
-                            duis laboris eiusmod. Minim exercitation minim Lorem Id deserunt sint duis cillumaliquip.
+                        <p>Choose From a Wide Range of Properties Which we Offers. Search Now! Find What You Need At Arabian Knights Tours
                         </p>
                     </div>
                 </div>
@@ -320,12 +319,25 @@
                     <div class="about_two_left">
                         <div class="about_two_left_top">
                             <h5>About us</h5>
-                            <h2>Discover your all the destinations with us!</h2>
-                            <p>
-                                Sint est eu sit ipsum enim amet esse sunt incididunt. Occaecat aliquip commodo ipsum
-                                officia
-                                in Lorem commodo aliquip dolore. Nisi domip excepteur commodo ea nostrud mollit.
-                            </p>
+                            <h2 class="mb-3">Discover your all UAE tours with us!</h2>
+                            
+                            <div class="news_sidebar_content_inner">
+                                <ul class="news_sidebar_category">
+                                    <li><a href="#!">Discover your all UAE tours with us!</a></li>
+                                    <li><a href="#!">City tours of Dubai , Abu Dhabi, and Sharjah</a></li>
+                                    <li><a href="#!">Hot air balloon rides over the desert</a></li>
+                                    <li><a href="#!">Desert safaris and dune bashinge</a></li>
+                                    <li><a href="#!">Camel and horseback riding tours</a></li>
+                                    <li><a href="#!">Shopping and dining tours</a></li>
+                                    <li><a href="#!">Adventure and water sports tours</a></li>
+                                    <li><a href="#!">Cruise tours</a></li>
+                                </ul>
+                               </div>
+                            
+                                
+                                
+                                             
+                           
                         </div>
                         <div class="about_two_left_middel">
                             <div class="about_two_item">
