--- a/frontend/templates/frontend/contact.html
+++ b/frontend/templates/frontend/contact.html
@@ -36,36 +36,42 @@
                 <div class="col-lg-12">
                     <div class="phone_tuch_area">
                         <h3>Stay in touch</h3>
-                        <h3><a href="tel:+00-123-456-789">+00 123 456 789</a></h3>
+                        <h3><a href="tel:+97143216565">+971 4 321 6565</a></h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="contact_boxed">
                         <h6>Head office</h6>
-                        <h3>New Mexico</h3>
-                        <p>4140 Parker Rd. Allentown, New Mexico 31134</p>
+                        <h3>DUBAI</h3>
+                        <p>SHIEKH ZAYED COLLECTOR ROAD, EMGATE, 206 , BANK OF ALBORAIDA SAME BUILDING</p>
+                        <h3>Working hours</h3>
+                        <p>Monday to Friday <br /> 9 am to 10pm</p>
                         <a href="!#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">View on map</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="contact_boxed">
-                        <h6>Washington office</h6>
-                        <h3>Washington</h3>
-                        <p>4517 Washington Ave. Manchester, Kentucky 39495</p>
+                        <h6>INDIA OFFICE</h6>
+                        <h3>MUMBAI</h3>
+                        <h3>Working hours</h3>
+                        <p>Monday to Friday <br /> 9 am to 10pm</p>
+                        <p>--------------------</p>
                         <a href="!#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">View on map</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="contact_boxed">
-                        <h6>California office</h6>
-                        <h3>California</h3>
-                        <p>3891 Ranchview Dr. Richardson, California 62639</p>
+                        <h6>INDONESIA OFFICE</h6>
+                        <h3>JAKARTA</h3>
+                        <p>3---------------------------</p>
+                        <h3>Working hours</h3>
+                        <p>Monday to Friday <br /> 9 am to 10pm</p>
                         <a href="!#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">View on map</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="contact_boxed">
-                        <h6>Office schedule</h6>
+                        <h6>PHILIPPINE OFFICE</h6>
                         <h3>Working hours</h3>
                         <p>Monday to Friday <br /> 9 am to 10pm</p>
                         <a href="!#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">View on map</a>
